# bohrium

./: .dockerignore  .gitignore  .gitmodules  .hgignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.inc  CMakeLists.txt  Jenkinsfile  Makefile  README  README.md  README.rst  THIS_IS_A_TEST  appveyor.yml  bh_version.h.in  build.py  build.sh  config.ini  config.ini.example  config.ini.in  config.ini.windows-example  ipython-magic.py  make-win-release.bat  platform.mk
benchmark/cil/: CMakeLists.txt
bridge/NumCIL/: CMakeLists.txt  Makefile  Makefile.osx  Makefile.win  NumCIL.sln  keypair.snk
bridge/bh107/: CMakeLists.txt  setup.py
bridge/bhpy/: CMakeLists.txt  __init__.py  _bhmodule.c  _util.py  _util.pyx  array_create.py  array_manipulation.py  backend.py  backend_bbc.py  backend_bhc.py  backend_numexpr.py  backend_numpy.py  backend_pygpu.py  bhc.i  bhc.i.head  dtypes.py  import_external.py  linalg.py  ndarray.py  ndarray.pyx  operator_overload.c  random.py  random123.pyx  setup.py  summations.py  ufunc.py
bridge/bohr/: CMakeLists.txt  main.cpp  small_bench.py
bridge/c/: CMakeLists.txt  Makefile  Makefile.osx  bh_c.h  cat_files.py  gen_array_operations.py  gen_array_operations_enum_typed.py  gen_specials.py  gen_specials_enum_typed.py  gen_types.py
bridge/cil/: CMakeLists.txt  NumCIL.sln  gen_array_operations.py  keypair.snk
bridge/cpp/: CMakeLists.txt  Doxyfile  Makefile  README  README.rst  bh_cppb.hpp  bh_cppb_functions.hpp  bh_cppb_operators.hpp  bh_cppb_state.hpp  bh_cppb_traits.hpp  bh_cppb_vector.hpp  black_scholes.cpp  cphvb_cppb.hpp  cphvb_cppb_functions.hpp  cphvb_cppb_operators.hpp  cphvb_cppb_state.hpp  cphvb_cppb_traits.hpp  cphvb_cppb_vector.hpp  hello.cpp  leak.py  mcpi.cpp  symbolize.py
bridge/cxx/: .clang-format  CMakeLists.txt  gen_array_operations.py
bridge/npbackend/: CMakeLists.txt  MANIFEST.in  __init__.py  __main__.py  _util.pyx  array_create.py  array_manipulation.py  backend_messaging.py  bh_info.py  bhary.pyx  bhc.i.head  blas.py  bohriumify.py  build.bash  cg.py  contexts.py  disk_io.py  import_external.py  info.py  lapack.py  linalg.py  masking.py  ndarray.pyx  opencv.py  random123.pyx  reorganization.py  requirements.txt  setup.py  stdviews.py  summations.py  ufunc.py  ufuncs.py  ufuncs.pyx  visualization.py
bridge/py_api/: CMakeLists.txt  build.bash  setup.py
bridge/ruby/: CMakeLists.txt
core/: CMakeLists.txt  Makefile  Makefile.osx  Makefile.win  bh.c  bh.cpp  bh_array.c  bh_array.cpp  bh_base.cpp  bh_component.c  bh_component.cpp  bh_conf.c  bh_config_parser.cpp  bh_constant.cpp  bh_dag.cpp  bh_dynamic_list.c  bh_error.c  bh_error.cpp  bh_extmethod.cpp  bh_fuse.cpp  bh_fuse_cache.cpp  bh_fuse_price.cpp  bh_instruction.cpp  bh_ir.cpp  bh_main_memory.cpp  bh_mem_signal.cpp  bh_memory.cpp  bh_opcode.c  bh_pprint.c  bh_pprint.cpp  bh_serialize.cpp  bh_signal.cpp  bh_timing.c  bh_timing.cpp  bh_transformer.c  bh_type.c  bh_type.cpp  bh_typeutil.c  bh_typeutil.cpp  bh_util.cpp  (+27 more)
core/bhir/: Makefile  Makefile.osx  bh_adjlist.cpp  bh_adjmat.cpp  bh_adjmat.h  bh_boolmat.cpp  bh_boolmat.h  bh_flow.cpp  bh_ir.cpp  bh_ir_map.cpp
core/bundler/: Makefile  Makefile.osx  Makefile.win  bh_bundler.cpp  cphvb_bundler.cpp
core/codegen/: Makefile  Makefile.osx  Makefile.win  README  argparse_utils.py  gen.py  gen_blas.py  gen_clblas.py  gen_complex.py  gen_extmethod.py  gen_opcodes.py  init_gen_opcodes.json.py  opcodes.json  opdict_to_list.py  types.json
core/comp/: Makefile  cphvb_comp.cpp
core/compute/: Makefile  Makefile.osx  Makefile.win  bh_compute.cpp  bh_compute_aggregate.cpp  bh_compute_helpers.cpp  bh_compute_matmul.cpp  bh_compute_nselect.cpp  bh_compute_random.cpp  bh_compute_reduce.cpp  bh_typeutil.cpp  cphvb_compute.cpp  cphvb_compute_aggregate.cpp  cphvb_compute_helpers.cpp  cphvb_compute_matmul.cpp  cphvb_compute_nselect.cpp  cphvb_compute_random.c  cphvb_compute_random.cpp  cphvb_compute_reduce.cpp  functors.hpp  reducer.hpp  traverser.hpp
core/depgraph/: DepGraph.cpp  DepGraph.hpp  DepSubGraph.cpp  DepSubGraph.hpp  Makefile
core/graph/: Makefile.win  bh_graph.cpp  bh_graph.hpp
core/iniparser/: CMakeLists.txt  Makefile.osx  Makefile.win
core/jitk/: apply_fusion.cpp  base_db.cpp  block.cpp  codegen_cache.cpp  codegen_util.cpp  compiler.cpp  fuser.cpp  fuser_cache.cpp  graph.cpp  instruction.cpp  iterator.cpp  kernel.cpp  scope.cpp  symbol_table.cpp  transformer.cpp  type.cpp  view.cpp
extmethods/blas/: CMakeLists.txt  main.cpp
extmethods/clblas/: CMakeLists.txt  main.cpp
extmethods/fftw/: CMakeLists.txt  Makefile  bh_fftw.cpp  bh_fftw.h  main.cpp
extmethods/lapack/: CMakeLists.txt
extmethods/matmul/: CMakeLists.txt  Makefile  bh_matmul.cpp  bh_matmul.h
extmethods/opencv/: CMakeLists.txt  filtering.cpp  main.cpp
extmethods/tdma/: CMakeLists.txt  main.cpp
extmethods/visualizer/: CMakeLists.txt  Makefile  Vector3.hpp  bh_ve_visualizer.cpp  bh_ve_visualizer.h  bh_visualizer.c  bh_visualizer.cpp  bh_visualizer.h  colormaps.hpp  main.cpp  visualizer.cpp  visualizer.hpp
filter/bccon/: CMakeLists.txt  collect_filter.cpp  collect_filter.hpp  component_interface.cpp  component_interface.h  contract_collect.cpp  contract_muladd.cpp  contract_reduction.cpp  contract_repeats.cpp  contract_stupidmath.cpp  contracter.cpp  contracter.hpp  filter.cpp  find_repeats_filter.cpp  find_repeats_filter.hpp  reduction_chain_filter.cpp  reduction_chain_filter.hpp  stupid_math_filter.cpp  stupid_math_filter.hpp
filter/bcexp/: CMakeLists.txt  component_interface.cpp  component_interface.h  expand_matmul.cpp  expand_powk.cpp  expand_reduce1d.cpp  expand_repeat.cpp  expand_sign.cpp  expander.cpp  expander.hpp
filter/complete_reduction/: CMakeLists.txt  filter.cpp  interface.cpp  interface.h
filter/composite_contraction/: CMakeLists.txt  component_interface.cpp  component_interface.h  filter.cpp  filter.hpp
filter/composite_expansion/: CMakeLists.txt  component_interface.cpp  component_interface.h  expand_matmul.cpp  expand_sign.cpp  expander.cpp  expander.hpp
filter/dimclean/: CMakeLists.txt  filter.cpp  interface.cpp  (+2 more)
(+2546 files in other folders)
